<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Portfolio Monitor</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_activity_search_symbol">SearchSymbolActivity</string>
    <string name="symbol_search">Enter symbol</string>
    <string name="button_search">Search</string>
    <string name="ok">OK</string>
    <string name="sim_behaviour_dialog">Pretending to perform action:</string>
    <string name="yahoo_download_dialog">Downloading from Yahoo</string>
    <string name="currency">Trade currency</string>
    <string name="currency_hint">Enter currency</string>
    <string name="position">Trade position</string>
    <string name="position_hint">Enter position</string>
    <string name="boughtat">Bought at</string>
    <string name="boughtat_hint">Enter value bought at</string>

    <!--<string name="portfolio_symbol">Symbol</string>-->
    <!--<string name="portfolio_name">Name</string>-->
    <string name="portfolio_currency">Ccy</string>
    <string name="portfolio_position">Units</string>
    <string name="portfolio_boughtat">\@</string>
    <string name="portfolio_price">Price</string>
    <string name="portfolio_change">Chg</string>
    <string name="portfolio_pctchange">(%)</string>
    <string name="portfolio_volume">Vol</string>

    <string name="portfolio_item_edit">Edit</string>
    <string name="portfolio_item_details">Chart</string>
    <string name="portfolio_item_delete">Delete</string>

</resources>
