<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >
        <TextView
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/currency"/>
        <EditText
            android:id="@+id/currency_user_input"
            android:inputType="text"
            android:hint="@string/currency_hint"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" >

            <requestFocus />

        </EditText>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >
        <TextView
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/position"/>
        <EditText
            android:id="@+id/position_user_input"
            android:inputType="numberSigned"
            android:hint="@string/position_hint"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" >
        </EditText>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >
        <TextView
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/boughtat"/>
        <EditText
            android:id="@+id/boughtat_user_input"
            android:inputType="numberDecimal"
            android:hint="@string/boughtat_hint"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" >
        </EditText>
    </LinearLayout>
</LinearLayout>