<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/portfolio_header"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/portfolio_symbol_header"
        android:text="@string/portfolio_symbol"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textColor="#ff000000">
    </TextView>
    <TextView
        android:id="@+id/portfolio_name_header"
        android:text="@string/portfolio_name"
        android:layout_width="0dip"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textColor="#ff000000">
    </TextView>
    <TextView
        android:id="@+id/portfolio_currency_header"
        android:text="@string/portfolio_currency"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textColor="#ff000000">
    </TextView>
    <TextView
        android:id="@+id/portfolio_position_header"
        android:text="@string/portfolio_position"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textColor="#ff000000">
    </TextView>
    <TextView
        android:id="@+id/portfolio_price_header"
        android:text="@string/portfolio_price"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textColor="#ff000000">
    </TextView>
    <TextView
        android:id="@+id/portfolio_change_header"
        android:text="@string/portfolio_change"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textColor="#ff000000">
    </TextView>
    <TextView
        android:id="@+id/portfolio_pctchange_header"
        android:text="@string/portfolio_pctchange"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textColor="#ff000000">
    </TextView>
    <TextView
        android:id="@+id/portfolio_volume_header"
        android:text="@string/portfolio_volume"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:textColor="#ff000000">
    </TextView>
</LinearLayout>